# test

./: .dockerignore  .env.example  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  GENERATION_API.md  Makefile  README.md  STRUCTURE.md  app.py  asgi.py  cli.py  docker-compose.yml  example_usage.py  pyproject.toml  pytest.ini  requirements.txt  sample_program.py  setup.py
app/: main.py
app/models/: __init__.py  data_models.py  generation_models.py
app/routers/: __init__.py  generation.py  health.py
app/schemas/: __init__.py  data_schemas.py
app/services/: __init__.py  generation_service.py
app/services/ldif/: __init__.py  generator.py  models.py  utils.py  validator.py
app/services/parsers/: __init__.py  csv_parser.py  data_parser.py  json_parser.py
coding_agents/: __init__.py  agents.py  graph.py  state.py
config/: settings.py
ldap_schema/: __init__.py  models.py  schema_loader.py
src/: generator.py  models.py  utils.py  validator.py
tests/: __init__.py  conftest.py  test_generation_api.py  test_generator.py  test_main.py  test_models.py  test_schema_loader.py
tests/fixtures/: data_fixtures.py  schemas.py
tests/integration/: test_integration_parsing.py
tests/unit/: test_csv_parser.py  test_data_parser_service.py  test_json_parser.py  test_models_schemas.py
